--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-	<script src="https://vidyahub.github.io/blob/main/nk.js"></script>
+	<script src="https://vidyahub.github.io/nk.js"></script>
 	<meta name="robots" content="noindex,nofollow" />
 	<style>
 		body {
@@ -36,7 +36,7 @@
 	</div>
 	<div id="phaser-game"></div>
 	<div id="adContainer"></div>
-	<script type="text/javascript" src="https://vidyahub.github.io/blob/main/ss.js"></script>
+	<script type="text/javascript" src="https://vidyahub.github.io/ss.js"></script>
 </body>
 
 </html>
