--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         const pageNames = [
             "lenny-home.html",
             "lenny-fun.html",
-            "lenny-express.html",
+            "lenny-express.html"
                     ];
 
         const contentDiv = document.getElementById('content');
