--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Game Section -->
         <section class="flex-1 flex flex-col items-center">
             <div class="w-full max-w-4xl aspect-[16/9] border-2 border-gray-600 rounded-lg overflow-hidden">
-                <iframe id="gameFrame" src="https://keyboard-test.space" 
+                <iframe id="gameFrame" src="https://12minibattles.github.io/" 
                     class="w-full h-full" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- Title & Fullscreen Button -->
