--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Game Section -->
         <section class="flex-1 flex flex-col items-center">
             <div class="w-full max-w-4xl aspect-[16/9] border-2 border-gray-600 rounded-lg overflow-hidden">
-                <iframe id="gameFrame" src="https://indown.io/" 
+                <iframe id="gameFrame" src="https://sssinstagram.com/" 
                     class="w-full h-full" frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- Title & Fullscreen Button -->
@@ -94,7 +94,7 @@
 
     if (iframeDoc) {
       // Ads ke classes ya IDs
-      let adElements = iframeDoc.querySelectorAll(".container-md");
+      let adElements = iframeDoc.querySelectorAll(".container");
 
       adElements.forEach(ad => ad.remove()); // Remove all ads
       console.log("Ads removed from iframe!");
