--- a/index.html
+++ b/index.html
@@ -1,48 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NikQuotes Generator</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     canvas { max-width: 100%; border-radius: 1rem; }
+    .template-img { cursor: pointer; border: 3px solid transparent; border-radius: 0.5rem; }
+    .template-img.selected { border-color: #3b82f6; }
   </style>
 </head>
 <body class="bg-gray-100 text-center p-6">
   <h1 class="text-3xl font-bold mb-6">NikQuotes Image Generator</h1>
 
-  <div class="grid gap-4 mb-6">
+  <div class="mb-4">
     <input id="nameInput" type="text" placeholder="Enter your name" class="p-2 rounded border" />
     <input id="photoInput" type="file" accept="image/*" class="p-2" />
-    <select id="templateSelect" class="p-2 rounded border">
-      <option value="1">Template 1</option>
-      <option value="2">Template 2</option>
-      <option value="3">Template 3</option>
-    </select>
-    <button onclick="generateImage()" class="bg-blue-600 text-white px-4 py-2 rounded">Generate</button>
   </div>
 
-  <canvas id="previewCanvas" width="600" height="600" class="mx-auto shadow-lg"></canvas>
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-4 mb-6" id="templateGallery">
+    <!-- Images will be inserted here dynamically -->
+  </div>
+
+  <button onclick="generateImage()" class="bg-blue-600 text-white px-4 py-2 rounded">Generate</button>
+  <canvas id="previewCanvas" width="600" height="600" class="mx-auto shadow-lg mt-6"></canvas>
   <button onclick="downloadImage()" class="mt-4 bg-green-600 text-white px-4 py-2 rounded">Download</button>
 
   <script>
-    const templates = {
-      1: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgm460ReF8i8RANCzrahncl5_AqZ3cvHCh7KdtQMohBb7FNCfpJRn_fumBnsAHZX74UzXH-Iq1cZ3oNxfwL7cc8XbW5V7hsDQ4K1kj37VvJKMe20mWQ0SKD0YKf4NencwzErm0Is-DpE004/s1600/Royal+Attitude+Status+In+Marathi+%25282%2529.jpg',
-      2: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiARk9kxYgceEVV2wMCMI9qLB_HZ85OFPihPnEB7wbp_40_MefWJOnWGEpOdwtjBeZMKA4wLndwcS7eE5mlLrf_3cPY2k-hBp9NhizQ4lzdEw_gpzVdMbd02GH3J3wAQvy4hle40ubLoeI/s1600/Royal+Attitude+Status+In+Marathi+%25283%2529.jpg',
-      3: 'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7WNz0NddqUnTh3aZP6eVoNtczDlQFBH50qH4rzyPqV0dTh8INujkrwQuq8kQDNkaEQw9-9QWs3Dr4y-Vwcl2t-lO7_VNBBy-arS-eC2ckqk5IhJ9LEmAqAKxZeNMIflyPxH9UKbiACQUq/s1600/Royal+Attitude+Status+In+Marathi+%25284%2529.jpg',
-    };
+    const templateGallery = document.getElementById('templateGallery');
+    const templates = [
+      'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7WNz0NddqUnTh3aZP6eVoNtczDlQFBH50qH4rzyPqV0dTh8INujkrwQuq8kQDNkaEQw9-9QWs3Dr4y-Vwcl2t-lO7_VNBBy-arS-eC2ckqk5IhJ9LEmAqAKxZeNMIflyPxH9UKbiACQUq/s1600/Royal+Attitude+Status+In+Marathi+%25284%2529.jpg',
+      'https://via.placeholder.com/600x600?text=Quote+2',
+      'https://via.placeholder.com/600x600?text=Quote+3',
+      'https://via.placeholder.com/600x600?text=Quote+4',
+      'https://via.placeholder.com/600x600?text=Quote+5'
+    ];
+
+    let selectedTemplate = null;
+
+    templates.forEach((url, index) => {
+      const img = document.createElement('img');
+      img.src = url;
+      img.className = 'template-img';
+      img.onclick = () => selectTemplate(img, url);
+      templateGallery.appendChild(img);
+    });
+
+    function selectTemplate(img, url) {
+      document.querySelectorAll('.template-img').forEach(i => i.classList.remove('selected'));
+      img.classList.add('selected');
+      selectedTemplate = url;
+    }
 
     async function generateImage() {
+      if (!selectedTemplate) {
+        alert('Please select a template image.');
+        return;
+      }
+
       const name = document.getElementById('nameInput').value;
       const file = document.getElementById('photoInput').files[0];
-      const templateId = document.getElementById('templateSelect').value;
       const canvas = document.getElementById('previewCanvas');
       const ctx = canvas.getContext('2d');
 
       const bg = new Image();
       bg.crossOrigin = 'anonymous';
-      bg.src = templates[templateId];
+      bg.src = selectedTemplate;
 
       bg.onload = () => {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -59,7 +83,6 @@
               ctx.clip();
               ctx.drawImage(img, 40, 40, 120, 120);
               ctx.restore();
-
               drawText(ctx, name);
             };
             img.src = e.target.result;
@@ -77,7 +100,6 @@
       ctx.textAlign = 'center';
       ctx.fillText(name, 300, 540);
 
-      // Branding
       ctx.font = 'bold 18px sans-serif';
       ctx.fillStyle = 'rgba(255, 255, 255, 0.8)';
       ctx.fillText('NikQuotes', 500, 580);
