--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
   <script>
     const templates = [
-      'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7WNz0NddqUnTh3aZP6eVoNtczDlQFBH50qH4rzyPqV0dTh8INujkrwQuq8kQDNkaEQw9-9QWs3Dr4y-Vwcl2t-lO7_VNBBy-arS-eC2ckqk5IhJ9LEmAqAKxZeNMIflyPxH9UKbiACQUq/s1600/Royal+Attitude+Status+In+Marathi+%25284%2529.jpg',
-      'template2.jpg',
-      'template3.jpg',
-      'template4.jpg',
-      'template5.jpg'
+      'https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7WNz0NddqUnTh3aZP6eVoNtczDlQFBH50qH4rzyPqV0dTh8INujkrwQuq8kQDNkaEQw9-9QWs3Dr4y-Vwcl2t-lO7_VNBBy-arS-eC2ckqk5IhJ9LEmAqAKxZeNMIflyPxH9UKbiACQUq/s1600/Royal+Attitude+Status+In+Marathi+%25284%2529.jpg',  // Placeholder image for CORS
+      'https://via.placeholder.com/600x400.png?text=Template+2',
+      'https://via.placeholder.com/600x400.png?text=Template+3',
+      'https://via.placeholder.com/600x400.png?text=Template+4',
+      'https://via.placeholder.com/600x400.png?text=Template+5'
     ];
 
     let selectedTemplate = null;
