--- a/cggk.html
+++ b/cggk.html
@@ -1,12 +1,51 @@
-तमोरपिंगला अभ्यारण्य
-जिला - सूरजपुर
-स्थापना - 1978
-नामकरण - तमोर पहाड़ी एवं पिंगला नदी के नाम पर
-क्षेत्रफल - 608 वर्ग किमी.
-यह छ.ग. राज्य में क्षेत्रफल की दृष्टि से सबसे बड़ा अभ्यारण्य है।
-वन्यजीव - नीलगाय (Nilgai)
-नदी - इस अभ्यारण्य से होकर रिहन्द नदी प्रवाहित होती है।
-जलप्रपात - कुमेलीघाट
-विशेष
-यह उत्तर की ओर उत्तरप्रदेश की सीमा से लगी हुई है।
-इस अभ्यारण्य को गुरु घासीदास राष्ट्रीय उद्यान के साथ टाइगर रिजर्व (वर्ष 2024) में शामिल किया गया है।
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Text to Speech</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gradient-to-r from-blue-100 via-white to-blue-100 min-h-screen flex items-center justify-center p-4">
+
+  <div class="bg-white shadow-2xl rounded-2xl p-6 max-w-lg w-full">
+    <h1 class="text-2xl font-bold mb-4 text-center text-blue-700">🗣️ Text to Speech</h1>
+
+    <textarea
+      id="text"
+      rows="5"
+      class="w-full p-3 border border-blue-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+      placeholder="Type your text here...">तमोरपिंगला अभ्यारण्य जिला - सूरजपुर स्थापना - 1978 नामकरण - तमोर पहाड़ी एवं पिंगला नदी के नाम पर क्षेत्रफल - 608 वर्ग किमी. यह छ.ग. राज्य में क्षेत्रफल की दृष्टि से सबसे बड़ा अभ्यारण्य है। वन्यजीव - नीलगाय (Nilgai) नदी - इस अभ्यारण्य से होकर रिहन्द नदी प्रवाहित होती है। जलप्रपात - कुमेलीघाट विशेष यह उत्तर की ओर उत्तरप्रदेश की सीमा से लगी हुई है। इस अभ्यारण्य को गुरु घासीदास राष्ट्रीय उद्यान के साथ टाइगर रिजर्व (वर्ष 2024) में शामिल किया गया है।</textarea>
+
+    <div class="mt-4 flex flex-col gap-3 sm:flex-row justify-between items-center">
+      <button
+        onclick="speakText()"
+        class="bg-blue-600 text-white font-semibold px-6 py-2 rounded-lg hover:bg-blue-700 transition">
+        🔊 Speak
+      </button>
+      <button
+        onclick="stopSpeaking()"
+        class="bg-red-500 text-white font-semibold px-6 py-2 rounded-lg hover:bg-red-600 transition">
+        ⏹ Stop
+      </button>
+    </div>
+  </div>
+
+  <script>
+    function speakText() {
+      const text = document.getElementById("text").value;
+      const utterance = new SpeechSynthesisUtterance(text);
+      utterance.lang = 'en-US'; // Change to 'hi-IN' for Hindi
+      utterance.rate = 1;
+      utterance.pitch = 1;
+      speechSynthesis.cancel(); // Stop previous speech
+      speechSynthesis.speak(utterance);
+    }
+
+    function stopSpeaking() {
+      speechSynthesis.cancel();
+    }
+  </script>
+
+</body>
+</html>
